--- a/iocp_server_cpp/LoadTest/configs/docker-compose.yml
+++ b/iocp_server_cpp/LoadTest/configs/docker-compose.yml
@@ -32,6 +32,8 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource
+      - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
+      - GF_LOG_LEVEL=debug
     networks:
       - monitoring
 
